@@ -5,3 +5,5 @@
 * Rename on double clicka
 * Fix for "make check" fail due to POTFILES.skip
 * Implemented support for mp4, m4a and wma
+* Disabled scanning by default on startup
+* Implemented OpenBSD support (thanks OpenBSD folks!)
